2006-09-23 19:40  pbrook

	* Makefile.target, vl.c, vl.h, hw/arm_gic.c, hw/arm_sysctl.c,
	  hw/pl080.c, hw/realview.c, hw/versatile_pci.c, hw/versatilepb.c:
	  Add ARM RealView Emulation Baseboard.

2006-09-21 23:46  bellard

	* hw/: vga.c, vga_int.h: VBE: 8 bit DACs + support for VBE BIOS IDs
	  (Volker Ruppert)

2006-09-21 22:34  pbrook

	* pc-bios/openbios-sparc32: Update sparc bios image (Blue Swirl).

2006-09-20 22:30  bellard

	* cpu-exec.c, hw/slavio_misc.c: sun4m halt support (Blue Swirl)

2006-09-20 22:28  bellard

	* qemu-doc.texi: update

2006-09-18 03:15  pbrook

	* Makefile.target, vl.h, hw/isa_mmio.c, hw/mips_r4k.c, hw/ppc.c,
	  hw/ppc_chrp.c: Merge common ISA access routines.

2006-09-17 05:20  pbrook

	* hw/esp.c: SPARC SCSI fixes.

2006-09-10 21:25  bellard

	* Makefile.target, vl.h, hw/cs4231.c, hw/sun4m.c: dummy cs4231
	  audio driver for sun4m (Blue Swirl)

2006-09-10 16:39  pbrook

	* vl.c: Avoid (repeatedly) trying to read stdin after it has
	  closed.

2006-09-10 01:35  pbrook

	* linux-user/syscall_defs.h: ARM 64-bit host fix.

2006-09-09 16:36  pbrook

	* target-arm/helper.c: Arm MMU fix (Justin Fletcher).

2006-09-09 14:17  bellard

	* hw/slavio_serial.c: allow host serial port usage (Blue Swirl)

2006-09-09 14:03  bellard

	* block-vvfat.c: vvfat fixes (Roger Lathrop)

2006-09-09 13:38  bellard

	* hw/slavio_serial.c: fix serial irq logic (Blue Swirl)

2006-09-09 13:35  bellard

	* hw/slavio_serial.c: added mouse protocol (Igor Kovalenko)

2006-09-09 13:31  bellard

	* hw/tcx.c: more correct display functions

2006-09-09 13:10  bellard

	* vl.c: two stop bits support

2006-09-03 21:48  bellard

	* vl.h, hw/pcnet.c, hw/sparc32_dma.c: better PCNET endianness
	  support

2006-09-03 19:10  bellard

	* qemu-doc.texi: typo

2006-09-03 19:09  bellard

	* target-i386/translate.c: multi byte nop support

2006-09-03 18:40  bellard

	* hw/pcnet.c: endianness fixes

2006-09-03 18:09  bellard
